# Botworld

./: Botworld.bib  Botworld.cabal  Botworld.lhs  LICENSE  Makefile  README.md  ct2hs.hs  index.html
Botworld/: Debug.hs  Display.hs  TextBlock.hs
examples/: Rudimentary.hs
games/: Precommit.hs  PrisonersDilemma.hs  SelfDestruct.hs  StagHunt.hs
games/Precommit/: Ideal.ct  Ideal.hs  Omega.ct  Omega.hs
games/SelfDestruct/: Ideal.ct  Ideal.hs  Omega.ct  Omega.hs
