name:                Botworld
version:             1.1.0.0
synopsis:            A cellular automaton used to study self-modifying agents
                     which are embedded in their environment.
description:         See http://intelligence.org/files/Botworld.pdf
homepage:            http://github.com/machine-intelligence/Botworld
license:             BSD3
license-file:        LICENSE
author:              Nate Soares, Benja Fallenstein
maintainer:          nate@intelligence.org
category:            Research
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Botworld,
                       Botworld.Debug,
                       Botworld.Display,
                       Botworld.TextBlock
  build-depends:       base >=4.6, containers >= 0.4, mtl >=2.1
  default-language:    Haskell2010

executable ct2hs
  main-is:             ct2hs.hs
  build-depends:       base >=4.6, containers >= 0.4, mtl >=2.1, parsec >= 3.1
  default-language:    Haskell2010
